<resources>
    <string name="app_name">Chat Translator</string>
    <string name="instant_chat">Instant Chat</string>
    <string name="string_toolbar_mfa">Chat Keyboard</string>
    <string name="chat_translator">Chat Translator</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="translate">Translate</string>
    <string name="voice_translator">Voice Translator</string>
    <string name="themes">Themes</string>
    <string name="tap_to_type_text">Tap to type text</string>
    <string name="keyboard_setting">Keyboard Setting</string>
    <string name="toolbar_cta">Chat Translator</string>
    <string name="enter_your_text">Enter your text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_translation">New Translation</string>
    <string name="setting">Setting</string>
    <string name="enable_disable">Enable / Disable</string>
    <string name="you_can_enable_or_disable_voice_keyboard">You can enable or disable voice keyboard</string>
    <string name="select_input_languages">Select input languages</string>
    <string name="english_united_states">English (Default)</string>
    <string name="show_number_row_on_top_of_character_layout">Show number row on top of character layout</string>
    <string name="popup_visibility">Popup Visibility</string>
    <string name="show_popup_when_you_press_a_key">Show popup when you press a key</string>
    <string name="e_g_keys_buttons_emoji_tabs">e.g. keys, buttons, emoji tabs</string>
    <string name="key_press_sounds">Key press sounds</string>
    <string name="enable_haptic_feedback">Enable haptic feedback</string>
    <string name="vibrate_for_input_events_dependent_on_system_settings">Vibrate for input events, dependent on system settings</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="rate_us">Rate Us!</string>
    <string name="how_would_you_love_this_app">How would you love this app?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="rate">\@</string>
    <string name="questionmark">\?</string>
    <string name="type_here_to_translate">Type here to translate</string>
    <string name="_1_month">1 Month</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="_18">18$</string>
    <string name="_1_year">1 Year</string>
    <string name="_1_time">1 Time</string>
    <string name="_subscription_string">You can cancel any subscription at any time in Subscriptions on Google Play. You’ll be charged automatically every month/year (as per subscribed subscription) until you cancel. You won’t be charged if you cancel before the trial period finished. Billing starts at the end of your free trail. Trail period start as soon as your subscription is confirmed by Google. Google send you reminder before your trial ends</string>
    <string name="buy_now">Buy Now</string>
    <string name="get_pro_features">Get Pro Features</string>
    <string name="please_allow_us_to_use_mic_for_chat_keyboard">Please allow us to use mic for chat keyboard</string>
    <string name="disable">Disable</string>
    <string name="enable_chat_keyboard_to_continue">Enable Chat Keyboard to continue</string>
    <string name="enable_access">Enable Access</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept">accept</string>
    <string name="html_content_second">For more information please visit our Privacy Policy.</string>
    <string name="agreement">I have read and agree to the privacy policy</string>
    <string name="privacy_policy_website">https://rnmappsdev.blogspot.com/2024/02/rnm-apps-privacy-policy.html</string>
    <string name="html_content">By clicking the ACCEPT button, you are confirming your agreement with our privacy policy and the terms and conditions governing the use of our app.</string>
    <string name="experience_instant_translations_as_you_type_or_speak_allowing_for_smooth_and_fluid_communication_in_any_situation">Experience instant translations as you type or speak, allowing for smooth and fluid communication in any situation.</string>
    <string name="id_interstitial_ad">ca-app-pub-9723290768181539/5996307331</string>
    <string name="id_rewarded_ad">ca-app-pub-3940256099942544/5224354917</string>
    <string name="id_native_ad">ca-app-pub-3940256099942544/2247696110</string>
    <string name="bannerId">ca-app-pub-3940256099942544/2014213617</string>
    <string name="bannerIdSimple">ca-app-pub-9723290768181539/3660474952</string>

</resources>